--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+.border {
+    border: 1px solid black;
+}
+
+body {
+    font-family: sans-serif;
+    background-color: var(--surface-ground);
+    color: var(--text-color);
+    padding: 0;
+    margin: 0;
+    min-height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+main {
+    width: 730px;
+    margin: 20px auto;
+}
+
+.card-game {
+    height: 140px;
+    width: 140;
+    font-size: 40px;
+    color: black;
+    font-weight: bold;
+    border: 1px solid black;
+}
+
+img {
+    width: 80% ;
+}
