--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,11 +4,33 @@
         <p-button class="flex align-items-center justify-content-center"
             icon="pi pi-refresh" (onClick)="reloadCards()"></p-button>
     </div>
+  
     <p-card >
+        <div class="flex">
+            <div class="flex-none flex align-items-center justify-content-center" >
+                <div class="field">
+                    <label for="movimientos">Movimientos:</label>
+                    <h2 class="text-center" id="movimientos">{{movements}}</h2>
+                </div>
+            </div>
+     
+            <div class="flex-grow-1 flex align-items-center justify-content-center">
+                <div class="field">
+                    <label for="timer">Tiempo:</label>
+                    <h1 class="text-center" id="timer">{{timer}}</h1>
+                </div>
+            </div>
+            <div class="flex-none flex align-items-center justify-content-center">
+                <div class="field">
+                    <label for="hits">Aciertos:</label>
+                    <h2 class="text-center" id="hits">{{hits}}</h2>
+                </div>
+            </div>
+        </div>
         <div class="grid">
             <div *ngFor="let item of cardItems; let i = index" class="col-3"> 
                 <button class="card-game flex justify-content-center align-items-center" id="{{i}}" (click)="clickDiv(i, item)">
-                    <img class="align-items-center" src="./assets/images/default.png" alt="">
+                    <img class="align-items-center" src="./assets/images/default.webp" alt="">
                 </button>
         </div>
         </div>
