--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --w: calc(70vw / 5);
+    --h: calc(70vh / 4);
+}
+
 .border {
     border: 1px solid black;
+}
+
+* {
+    transition: all 0.5s;
+}
+
+div {
+    display: inline-block;
 }
 
 body {
@@ -9,25 +22,47 @@ body {
     color: var(--text-color);
     padding: 0;
     margin: 0;
-    min-height: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-main {
-    width: 730px;
-    margin: 20px auto;
-}
-
-.card-game {
-    height: 140px;
-    width: 140;
-    font-size: 40px;
-    color: black;
-    font-weight: bold;
-    border: 1px solid black;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 img {
-    width: 80% ;
+    width: 50%;
+}
+
+.card_area,
+.card,
+.face {
+    cursor: pointer;
+    width: var(--w);
+    min-width: 100px;
+    height: var(--h);
+}
+
+.card {
+    position: relative;
+    transform-style: preserve-3d;
+}
+
+.face {
+    position: absolute;
+    backface-visibility: hidden;
+    box-shadow: inset 0 0 0 5px white;
+    font-size: 500%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.back {
+    background-color: lightcyan;
+    transform: rotateY(180deg);
+}
+
+.front {
+    background: linear-gradient(rgb(216, 169, 82), darkorange);
 }
